[project]
name = "brutebench"
version = "0.1.0"
description = "Modern system benchmark for developers"
authors = [{ name = "Irfan Uruchi" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "psutil",
    "numpy"
]

[project.optional-dependencies]
gpu = ["mlx", "torch"]

[project.scripts]
brutebench = "brutebench.cli.main:main"

[tool.setuptools.packages.find]
include = ["brutebench*"]